--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Form</title>
+    <link rel="stylesheet" href="form.css" />
   </head>
   <body>
-    <h1 style="text-align: center">Feedback Form</h1>
+    <h1 style="text-align: center; padding-top: 20px;">Feedback Form</h1>
     <div id="main-form">
       <form action="#">
         <label for="feedback-type">Feedback Type:</label>
@@ -18,7 +19,7 @@
         </select>
         <br />
         <br />
-        <label for="message">message:</label><br>
+        <label for="message">Message:</label>
         <textarea name="message" id="message" rows="4" cols="30"></textarea>
         <br /><br />
 
@@ -33,27 +34,34 @@
           <input type="radio" />
           <label>Poor</label>
         </div>
-        <label for="age">Age (10-100):</label><br>
+        <label for="age">Age (10-100):</label>
         <input type="number" />
-        <br>
-        <br>
+        <br />
+        <br />
 
-        <label for="email">Email:</label><br>
+        <label for="email">Email:</label>
         <input type="email" />
-        <br>
-        <br>
+        <br />
+        <br />
 
         <label for="password">Password (min 8 characters):</label>
-        <br>
-        <input type="password">
-        <br>
-        <br>
+       
+        <input type="password" />
+        <br />
+        <br />
 
         <label for="URL">Website URL (Optional):</label>
-        <br>
-        <input type="url" name="url" id="URL">
+        <input type="url" name="url" id="URL" />
+        <br /><br />
+        <div id="checkbox-div">
+          <input type="checkbox" id="checkbox" />
+          <label for="checkbox">I agree to terms and conditions</label>
+        </div>
+        <input id="submit-button" type="button" value="Submit">
       </form>
     </div>
+    <br>
+    <br>
   </body>
 </html>
 
